--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div id="voiceWidget" class="voice-widget">
         <div class="top-container">
-        <img src="SEVENTEEN Instagram & Weibo on Twitter.jpg"alt="Sqaure Photo" id="Photo" class="Photo">
+        <img src="☾.jpg"alt="Sqaure Photo" id="Photo" class="Photo">
         <audio id="audio" controls></audio>
     </div>
     <p id="transcription">Motivational transcription will appear here.</p>
